tests/sema/fail/borrow_use_while_mut.kl
int main() {
  int a = 1;
  &mut a;
  a = 2;
  return 0;
}
